test/langtools/tools/javac/valhalla/lworld-values/InlineAnnotationOnAnonymousClass.out
InlineAnnotationOnAnonymousClass.java:11:24: compiler.err.mod.not.allowed.here: primitive
1 error
